**0.4.0.3**

- Fixed issue which could crash the server when checking the latest update time

**0.4.0.2**

- Added server **status display** for online conversion
- Added ability to download both the **code and the runtime** files as a zip

**0.4**

- Converter now runs on **Python 3** and creates Python 3 compatible code