@@ -1,5 +1,6 @@
 **0.4.0.3**
 
+- Added button to copy Python code to clipboard
 - Fixed issue which could crash the server when checking the latest update time
 
 **0.4.0.2**
